<resources>

    <string name="app_name">SongMojo</string>

    <!-- Firebase database -->
    <string name="users">Users</string>

    <!-- Login.java -->
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="log_in">Log in</string>
    <string name="logging_in">Logging in...</string>
    <string name="no_account_found">No account found</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create">Create</string>
    <string name="no_email_entered">No email entered</string>
    <string name="no_password_entered">No password_entered</string>
    <string name="account_created">Account created</string>
    <string name="password_length_error">Error: Password must be at least 8 characters long</string>
    <string name="account_already_exists_error">Error: Account aleady exists</string>
    <string name="failed_to_create_account">Failed to create account</string>
    <string name="email_password_error">Email/password error</string>
    <string name="no_network_connection">Error: No network connection</string>
    <string name="database_error">Database error</string>

    <!-- ForgotPasswordDialog -->
    <string name="contact_tony">Contact Tony at avblake225@gmail.com and ask for your password</string>

    <!-- Home.java / home.xml -->
    <string name="home">Home</string>

    <!-- no_files_sent_or_received.xml -->
    <string name="no_files_sent_or_received">No files sent/received</string>

    <drawable name="clr_focused">#FF6600</drawable>
    <drawable name="clr_pressed">#FFD700</drawable>
    <drawable name="white">#FFFFFF</drawable>
    <drawable name="black">#000000</drawable>

    <string name="songmojo">SongMojo</string>
    <string name="recordings">Recordings</string>

    <string-array name="menu_items">
        <item>Send File</item>
        <item>Find Band Members</item>
        <item>Edit Band Members</item>
        <item>Files sent</item>
        <item>Files received</item>
    </string-array>

    <string name="log_out">Log out</string>

    <!-- Send File screen -->
    <string name="send_file">Send File</string>
    <string name="set_file_name">Set File Name:</string>
    <string name="select_file_type">Select File Type:</string>
    <string name="audio_file">Audio file</string>
    <string name="video_file">Video file</string>
    <string name="select_recipient">Select Recipient:</string>
    <string name="proceed_to_recording">Proceed to recording</string>
    <string name="please_set_file_name">Please set file name</string>
    <string name="please_select_file_type">Please select file type</string>

    <!-- record_audio.xml -->
    <string name="record_audio">Record Audio</string>
    <string name="file_name">File name:</string>
    <string name="_mp3">.mp3</string>
    <string name="edit">EDIT</string>
    <string name="filename_updated">Filename updated</string>
    <string name="recipient_updated">Recipient updated</string>
    <string name="recipient">Recipient:</string>
    <string name="temp_file">TempFile</string>
    <string name="cue_backing_track">Cue Backing Track</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="close">Close</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="send">Send</string>

    <!-- edit_filename_dialog.xml -->
    <string name="enter_new_filename">Enter new filename</string>

    <!-- EditRecipientDialog.java -->
    <string name="edit_recipient">Edit recipient</string>

    <!-- Record Video -->
    <string name="record_video">Record Video</string>
    <string name="video_saved">Video saved</string>
    <string name="video_playing">Video playing</string>

    <!-- CueBackingTrackDialog.java -->
    <string name="select_track">Select track</string>
    <string name="select">Select</string>
    <string name="set_as_backing_track">set as backing track</string>
    <string name="backing_track_removed">Backing track removed</string>
    <string name="no_tracks_available">No tracks available</string>

    <!-- Record/Play Dialog -->
    <string name="recording">Recording...</string>
    <string name="playing">Playing...</string>
    <string name="saved_to_device">saved to device</string>

    <!-- Sending File dialog -->
    <string name="sending_file">Sending file...</string>
    <string name="file_sent">File sent</string>
    <string name="done">Done</string>

    <!-- Get File Progress Dialog -->
    <string name="checking_for_new_files">Checking for new files...</string>

    <!-- Creating Account Progress Dialog -->
    <string name="creating_account">Creating Account...</string>

    <!-- GetFileTask.java -->
    <string name="success">Success</string>
    <string name="fail">Fail</string>

    <!-- FileSentDialog.java -->
    <string name="_mp4">.mp4</string>

    <!-- GetFileDialog.java -->
    <string name="enter_file_name">Enter file name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">ok</string>
    <string name="no_file_name_entered">No file name entered</string>
    <string name="no_file_found">No file found</string>

    <!-- DB queries -->
    <string name="select_all_rows_from">SELECT * FROM</string>
    <string name="where_user_equals">WHERE USER =</string>
    <string name="where_recipient_equals">WHERE RECIPIENT =</string>
    <string name="and_date_equals">AND DATE =</string>
    <string name="delete_from">DELETE FROM</string>
    <string name="no_files_sent">No Files Sent</string>
    <string name="duration">Duration:</string>

    <!-- files_sent_or_received.xml -->
    <string name="files_sent">Files Sent</string>
    <string name="files_received">Files Received</string>
    <string name="clear_all">Clear all</string>
    <string name="files_cleared">Files cleared</string>
    <string name="nothing_to_clear">Nothing to clear</string>

    <!-- sent_file_item_layout.xml -->
    <string name="file_type">File type:</string>
    <string name="date">Date:</string>

    <!-- ClearAllDialog.java -->
    <string name="confirm_clear_all">Are you sure you want to clear all files?</string>
    <string name="yes">Yes</string>

    <!-- FindBandMemberDialog.java -->
    <string name="find_band_member">Find Band Member</string>

    <!-- EditFilenameDialog.java -->
    <string name="edit_filename">Edit filename</string>

    <!-- find_band_member_dialog.xml -->
    <string name="enter_name">Enter name</string>

    <!-- received_file_item_layout.xml -->
    <string name="sender">Sender:</string>

    <!-- EditBandMembers.java -->
    <string name="edit_band_members">Edit Band Members</string>
    <string name="no_band_members_added">No band members added</string>

    <!-- band_member_item_layout.xml -->
    <string name="name">Name:</string>

    <!-- Misc -->
    <string name="error_downloading_file">Error downloading file</string>

</resources>
