<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_layout_margin_left"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/songmojo_logo"/>

            <EditText
                android:id="@+id/et_email"
                android:padding="@dimen/et_padding"
                android:hint="@string/email"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@null"
                android:background="@color/dark_gray"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_password"
                android:padding="@dimen/et_padding"
                android:layout_marginTop="@dimen/et_password_margin_top"
                android:hint="@string/password"
                android:inputType = "textPassword"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@null"
                android:background="@color/dark_gray"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_log_in"
                android:layout_marginTop="@dimen/btn_log_in_margin_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/log_in"/>

            <Button
                android:id="@+id/btn_create_account"
                android:background="@drawable/background_color_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/create_account"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/btn_forgot_password"
                android:background="@drawable/background_color_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/forgot_password"
                android:textColor="@color/white"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
